--- a/style.css
+++ b/style.css
@@ -49,3 +49,41 @@ body {
 .play-board .head {
     background: #6509ab;
 }
+
+.controls {
+    display: none;
+    justify-content: space-between;
+}
+
+.controls i {
+    padding: 25px 0;
+    color: #edeaf1;
+    text-align: center;
+    cursor: pointer;
+    font-size: 1.3rem;
+    width: calc(100% /4);
+    border-right: 1px solid #171b26;
+}
+
+@media screen and (max-width :800px) {
+
+    .wrapper {
+        width: 90vmin;
+        height: 105vmin;
+    }
+
+    .game-details {
+        font-size: 1rem;
+        padding: 15px 27px;
+    }
+
+    .controls {
+        display: flex;
+    }
+
+    .controls i {
+        padding: 15px 0;
+        font-size: 1rem;
+    }
+
+}
